# djangoflix_api

./: .gitignore  pyproject.toml  requirements.txt
actors/: models.py  urls.py  views.py
actors/migrations/: 0001_initial.py
app/: permissions.py  settings.py  urls.py
authentication/: urls.py
genres/: admin.py  models.py  permission.py  permissions.py  serializers.py  urls.py  views.py
genres/migrations/: 0001_initial.py
movies/: models.py  serializers.py  urls.py  views.py
movies/migrations/: 0001_initial.py
reviews/: models.py  urls.py  views.py
reviews/migrations/: 0001_initial.py
