[project]
name = "djangoflix_api"
version = "0.1.0"
description = ""
authors = [
    {name = "lphillipe"}
]
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.4,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.15,<0.16.0)"
]

[tool.ruff]
# Define o tamanho máximo de linha recomendado pela PEP 8 (ou use 88 do Black)
line-length = 79

[tool.ruff.lint]
# "E" e "W" ativam todas as regras de estilo e avisos da PEP 8
select = ["E", "W", "F", "I"]
# Regras específicas que você queira ignorar (opcional)
ignore = []

